# banshee-sympatico

./: LICENSE  README.md  jade.xml  jira-tag-cloud.html
bookstore/: build.gradle
bookstore/src/main/java/com/jbalint/bs/bookstore/: BibtexExtractor.java  FileMetadataGenerator.java
bookstore/src/main/java/com/jbalint/bs/ontology/: Bibtex.java  BsLib.java  Nepomuk.java
bookstore/src/main/resources/: grobid-bibtex-mapping.ttl  log4j2.xml
drachma/: acct_bal.rq  amex_to_ledger.sh  amex_to_ledger_latest.sh  amex_to_rdf.sh  daily_budget_report.ipynb  daily_budget_report.sh  drachma-serf-model.ttl  drachma.el  gen_load.sh  grooming_income.rq  issue_total.rq  ledger-import.py  monthly_budget_report.ipynb  monthly_spend.rq  requirements.txt  yearly_spend_summary.rq
git_repo_monitor/: Cargo.toml  git_modified_repo_count.sh  git_monitor_report.sh
git_repo_monitor/src/: main.rs
indri_agent_v1/: build.xml  indri_agent_v1_design.org
indri_agent_v1/src/main/c++/: Makefile  bs_indri_v1_Query.h  indri_query.cpp
indri_agent_v1/src/main/java/bs/indri/v1/: Query.java  TestQuery.java
intellij-lab/: build.gradle.kts  settings.gradle.kts
intellij-lab/src/main/java/jbalint/navtracker/: NavMain.java
intellij-lab/src/main/java/jbalint/poc/listener/: POCAnActionListener.java  POCBookmarksListener.java  POCBulkFileListener.java  POCIdeDocumentHistoryImpl_RecentPlacesListener.java  POCIndexedFilesListener.java  POCModificationTrackerListener.java  POCProjectManagerListener.java  POCPsiDocumentListener.java  POCSelectionListener.java  package-info.java
intellij-lab/src/main/java/jbalint/synthesis/: Indexer.java  MyAction.java  MyBuildManagerListener.java  MyCompileTask.java
intellij-lab/src/main/java/jbalint/sythesis/: Indexer.java  MyAction.java  MyBuildManagerListener.java  MyCompileTask.java
kernel/: Makefile  base.flr  bs_boxinglove.lua  bs_crate.lua  bs_flora.lua  bs_init.lua  bs_lua.c  bs_lua.h  bs_monkeyhead.lua  bs_rdfs.flr  bs_stardog.lua  bs_xsb.c  bs_xsb.h  bsbleditor.lua  crate.org  crate_turtle.lua  kernel.c  lua_repl.c  slender.lua  xsb.c  xsb.h
kernel/turtle/: sparkle.org  sparkleObj.lua  sparql_test.lua  sparqlclient.lua  start_of_sparql_update.diff  test_sparkleObj.lua  test_sparqlclient.lua  test_turtleparse.lua  ttl2flr.lua  ttl_parse.lua  turtleparse.lua
lua/: README  bs_lua_env.sh
meera/: Objectspace.hs  README.md  README.txt  Syntax.hs  dl.hs  dl2.hs  kifexample_rdf.kif  kifreader.ml  lisp_syntax_test.txt  meera.cabal  meera.ml  objectspace.hs  ospace_lisp.hs  parser.lua  prolog_engine1.hs  term.ml  test_objectspace.hs  test_parser.lua  tptp_parse.hs  tptp_prop1.p
ontologies/: README  bibo.flr  bibo.ttl  bibtex.owl  dao_v1.0.trig  dcon_v1.0.trig  dcterms.flr  dcterms.ttl  ddo_v1.0.trig  dlpo_v1.0.trig  dpo_v1.0.trig  drmo_v1.0.trig  duho_v1.0.trig  nao_v1.2.flr  nao_v1.2.trig  nao_v1.2.ttl  ncal_v1.1.flr  ncal_v1.1.trig  ncal_v1.1.ttl  nco_v1.2.trig  ndo_v1.0.trig  nexif_v1.1.trig  nfo_v1.2.trig  nid3_v1.1.trig  nie_v1.2.flr  nie_v1.2.trig  nie_v1.2.ttl  nmm_v1.0.trig  nmo_v1.1.trig  nrl_v1.2.flr  nrl_v1.2.trig  nrl_v1.2.ttl  nso_v1.1.trig  nuao_v1.0.trig  pimo_v1.3.flr  pimo_v1.3.trig  pimo_v1.3.ttl  skos-core.flr  skos-core.ttl  tmo_v1.1.flr  (+2 more)
percy/: bs-x11-util.el  chromozol-current-tab.sh  curl-params.sh  muse.el  percy-action.el  percy-add-jira-link.sh  percy-bookmarks.sh  percy-bookstore.sh  percy-chromozol.sh  percy-client.sh  percy-code-snippet-source.el  percy-helm-wiki-pages.sh  percy-jira-insight-objects.sh  percy-jira-issues.sh  percy-kodi-files.sh  percy-sources.ttl  percy-stardew-valley-source.el  percy-stop.sh  percy-text-search-source.el  percy-text-search.rq  percy-wiki-pages.sh  percy-x11-window-source.el  percy.el  percy.ttl  readme.org  test-scripts.sh
planner/: design.org
pocket/: pocket.sms
prototype-code/: Makefile  basic_commands.lua  basic_commands2.lua  command_registry.lua  concurrency.sh  dzen.lua  dzen2_IDO.sh  event_handler_registry.lua  events.sh  fdopen.c  grabkey.c  grabkey.lua  lua_graph_orm_stardog.lua  replay_test.c  slender.el  wmii_event_broadcast.lua  wmii_events.lua  x11.lua
weechat-playground/: CMakeLists.txt  playground.cpp
wmii_agent_v1/: build.xml  wmii_agent_v1_design.org
wmii_agent_v1/src/main/java/bs/jade/: MessageReceiver.java  MessageReceiverFacade.java
wmii_agent_v1/src/main/java/bs/wmii/v1/: SubscriptionManager.java  TraceAgent.java  WmiiAgent.java  Wmiir.java
wmii_agent_v1/src/main/java/bs/wmii/v1/ontology/: ClientEvent.java  ClientInfo.java  ClientInfoRequest.java  SubscribeRequest.java  TagEvent.java  TagInfo.java  WmiiOntology.java
