[package]
name = "git_repo_monitor"
version = "0.1.0"
authors = ["Jess Balint <jbalint@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.27.0"
git2 = "0.13.1"
itertools = "0.9.0"
reqwest = { version = "0.10.4", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
