name:                meera

-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

synopsis: Meera is a deductive database system.

-- description:         

-- license:             

-- The file containing the license text.
license-file:        LICENSE

author:              Jess Balint
maintainer:          jbalint@gmail.com

-- A copyright notice.
-- copyright:           

category:            Database

build-type:          Simple

extra-source-files:  README.md

cabal-version:       >=1.10


library
  -- Modules exported by the library.
  -- exposed-modules:     
  
  -- Modules included in this library but not exported.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  other-extensions:    OverloadedStrings, DeriveGeneric, DefaultSignatures
  
  -- Other library packages from which modules are imported.
  -- build-depends:       base >=4.7 && <4.8

  build-depends: base, bytestring, cereal, data-default, containers, utf8-string, time, leveldb-haskell
  
  -- Directories containing source files.
  -- hs-source-dirs:      
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  exposed-modules:     Objectspace

  
executable ospace_lisp
           main-is: ospace_lisp.hs
  -- LANGUAGE extensions used by modules in this package.
  other-extensions:    OverloadedStrings, DeriveGeneric, DefaultSignatures
  
  -- Other library packages from which modules are imported.
  -- build-depends:       base >=4.7 && <4.8

  build-depends: base, bytestring, cereal, data-default, containers, utf8-string, time, leveldb-haskell
  build-depends: base, text, s-cargot, parsec
