name:                meera

-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.2.0.0

synopsis: Meera is a deductive database system.

-- description:         

-- license:             

-- The file containing the license text.
license-file:        LICENSE

author:              Jess Balint
maintainer:          jbalint@gmail.com

-- A copyright notice.
-- copyright:           

category:            Database

build-type:          Simple

extra-source-files:  README.md

cabal-version:       >=1.10


library
  -- Modules exported by the library.
  -- exposed-modules:     
  
  -- Modules included in this library but not exported.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  other-extensions:    OverloadedStrings, DeriveGeneric, DefaultSignatures
  
  -- Other library packages from which modules are imported.
  -- build-depends:       base >=4.7 && <4.8

  build-depends: array >= 0.5.1.0
               , base
               , bytestring
               , cereal
               , containers
               , data-default
               , leveldb-haskell
               , logict >= 0.6.0.2
               , parsec >= 3.1.9
               , s-cargot >= 0.1.0.0
               , text >= 1.2.0.4
               , time
               , utf8-string
  
  -- Directories containing source files.
  -- hs-source-dirs:      
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  exposed-modules:     Objectspace, Syntax

  
executable ospace_lisp
           main-is: ospace_lisp.hs
  -- LANGUAGE extensions used by modules in this package.
  other-extensions:    OverloadedStrings, DeriveGeneric, DefaultSignatures
  
  -- Other library packages from which modules are imported.
  -- build-depends:       base >=4.7 && <4.8

  build-depends: array >= 0.5.1.0
               , base
               , bytestring
               , cereal
               , containers
               , data-default
               , leveldb-haskell
               , logict >= 0.6.0.2
               , parsec >= 3.1.9
               , s-cargot >= 0.1.0.0
               , text >= 1.2.0.4
               , time
               , utf8-string
  build-depends: base, text, s-cargot, parsec
